exercises/macros/tests/invalid/double-commas.stderr
error: no rules expected the token `,`
 --> $DIR/double-commas.rs:5:24
  |
5 |     hashmap!('a' => 2, ,);
  |                        ^ no rules expected this token in macro call
